# src/static/swagger_layout.json
@@ -749,6 +749,10 @@
             "type": "string",
             "format": "date"
           },
+          "dataAtualizacao": {
+            "type": "string",
+            "format": "date"
+          },
           "_v": {
             "type": "integer",
             "format": "int64"
@@ -845,6 +849,10 @@
             "format": "int64"
           },
           "dataCriacao": {
+            "type": "string",
+            "format": "date"
+          },
+          "dataAtualizacao": {
             "type": "string",
             "format": "date"
           },
